--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/leaflet": "^1.9.21",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "sweetalert2": "^11.26.2",
     "tailwindcss": "^4.1.14",
     "xlsx": "^0.18.5"
